--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.7-1</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
